better handling of scrolling up (#833)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -313,7 +313,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 .static .doc-content .index { position:fixed; width:310px; background:white; top:130px; padding:0; padding-top:0px; padding-bottom:40px;}
 .static .doc-content .index > div { height:calc(100vh - 80px - 50px /*- 40px*/); overflow: auto; box-sizing: border-box; padding-bottom:40px; box-sizing: border-box;}
 .static .doc-content .index ~ * { padding-left:350px; }
-.static .doc-content .index .c25:not(.c19,.c8) a { font-size:16px; font-weight:600; margin-top:5px; display: block; color:#;}
+.static .doc-content .index .c25:not(.c19,.c8) a { font-size:16px; font-weight:600; margin-top:5px; display: block; }
 .static .doc-content .index .c19 a { font-size:14px; font-weight:500;}
 .static .doc-content .index .c8 a { font-size:13px; font-weight:400; }
 .static .doc-content a:focus-visible { outline:none; }
@@ -339,7 +339,12 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 .static .doc-content .index sup { display:none; }
 
-.static .doc-content .index .on { text-decoration: underline; }
+.static .doc-content .index .on { font-weight:800 !important; }
+
+/*
+.static .doc-content .index .on::before { content:">"; position:absolute;right:100%;top:0;margin-right:5px;margin-top:4px;}
+.static .doc-content .index .on::after { content:"<"; position:absolute;left:100%;top:0;margin-left:5px;margin-top:4px;}
+*/
 
 [lang='bo'] .static-container[data-dir^="user-guide"] #samples { padding-bottom:0; margin:0 !important; }
 .static-container[data-dir^="user-guide"] #samples .doc-content.bo { padding-bottom:0px; padding-right:0;}
