remove new search bar on home/results page + fix link url to results from autocomplete

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -608,6 +608,8 @@ html[lang="bo"] .msg-popup .front p { font-size:18px;}
 
 /* ------------------------ new UX ------------------------- */
 
+#root .App .SearchPane { margin-top:0; }
+
 .infoPanel.inRes { margin-top:0 !important; }
 
 .over-nav ~ div .resource > .index,
